# ZoomScribe

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  Makefile  README.md  pr_draft.md  pyproject.toml  requirements-dev.txt  requirements.txt  sgconfig.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
.specify/templates/: plan-template.md
rule-tests/: python-logging-sensitive-literals-test.yml  python-no-subprocess-shell-test.yml
rule-tests/__snapshots__/: python-logging-sensitive-literals-snapshot.yml  python-no-subprocess-shell-snapshot.yml
rules/python/: logging_sensitive_literals.yml  no_subprocess_shell.yml  requests_no_verify_false.yml  requests_require_timeout.yml
specs/001-zoom-downloader-p1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/zoom-downloader-p1/: spec.md
src/tests/: test_client.py  test_downloader.py  test_main.py  test_models.py  test_web_api.py
src/tests/screenshare/: test_preprocess.py
src/zoom_scribe/: __init__.py  _datetime.py  _redact.py  client.py  config.py  downloader.py  main.py  models.py  web_api.py  web_types.py
src/zoom_scribe/screenshare/: __init__.py  preprocess.py
utils/: python_logger_method.yml  python_requests_method.yml  python_sensitive_string.yml  python_subprocess_call.yml
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: RecordingTable.tsx
web/src/pages/: RecordingsPage.tsx
