[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "PERF", "RUF", "D"]
ignore = ["D203", "D212", "D401"]

[tool.ruff.lint.isort]
known-first-party = ["zoom_scribe"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
implicit_optional = false
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["build", "dist", ".venv"]
