[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PL",
    "PERF",
    "RUF",
    "D",
    "A",
    "ARG",
    "C4",
    "DTZ",
    "PTH",
]
ignore = ["D203", "D212", "D401"]

[tool.ruff.lint.isort]
known-first-party = ["zoom_scribe"]

[tool.ruff.lint.per-file-ignores]
"src/tests/**/*.py" = ["D", "PLR2004"]
"src/zoom_scribe/client.py" = ["PLR0912", "PLR0913"]
"src/zoom_scribe/config.py" = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
implicit_optional = false
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["build", "dist", ".venv"]

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true
